[UT] Fix deprecated Long constructor usage in test classes
- Updated license header in ListComparatorTest.java to StarRocks format
- Replaced all new Long() calls with Long.valueOf() in test classes:
  * ListComparatorTest.java (24 instances)
  * SqlModeHelperTest.java (3 instances)
  * RestoreFileMappingTest.java (4 instances)
  * RoutineLoadJobTest.java (2 instances)
  * MaterializedViewHandlerTest.java (1 instance)
  * DppUtilsTest.java (1 instance)
- Total 35 deprecated constructor calls fixed

Signed-off-by: alvin-celerdata <alvin.zhao@celerdata.com>